--- a/olahData/count_total_data.ipynb
+++ b/olahData/count_total_data.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "bc92bb4a",
    "metadata": {},
    "outputs": [
@@ -165,25 +165,35 @@
      "output_type": "stream",
      "text": [
       "======================================================================\n",
-      "COUNTING CSV ROWS - 2026-01-21 23:14:24\n",
+      "COUNTING CSV ROWS - 2026-01-27 01:41:21\n",
       "======================================================================\n",
       "  • aksesoriAnak_enriched.csv                     | Rows:      1,192\n",
       "  • aksesoriPria_enriched.csv                     | Rows:      1,109\n",
       "  • aksesoriWanita_enriched.csv                   | Rows:      1,160\n",
+      "  • alatDapur_enriched.csv                        | Rows:      2,170\n",
       "  • bajuPria_enriched.csv                         | Rows:      1,859\n",
       "  • bajuWanita_enriched.csv                       | Rows:      2,136\n",
       "  • celanaPria_enriched.csv                       | Rows:      1,886\n",
       "  • celanaWanita_enriched.csv                     | Rows:      2,037\n",
+      "  • dalamanAnak_enriched.csv                      | Rows:      1,231\n",
       "  • dalamanPria_enriched.csv                      | Rows:        522\n",
+      "  • dalamanWanita_enriched.csv                    | Rows:      1,139\n",
       "  • jaketPria_enriched.csv                        | Rows:      1,057\n",
       "  • jilbabWanita_enriched.csv                     | Rows:      1,038\n",
+      "  • kainDaerah_enriched.csv                       | Rows:      2,284\n",
       "  • khasDaerah_enriched.csv                       | Rows:      2,091\n",
+      "  • kopiKhas_enriched.csv                         | Rows:      1,257\n",
+      "  • kueKering_enriched.csv                        | Rows:      1,196\n",
       "  • makanan_enriched.csv                          | Rows:      2,167\n",
       "  • muslimPria_enriched.csv                       | Rows:      1,117\n",
       "  • muslimahWanita_enriched.csv                   | Rows:      2,200\n",
       "  • outerWanita_enriched.csv                      | Rows:      2,094\n",
+      "  • pakaianAdat_enriched.csv                      | Rows:      1,149\n",
       "  • pakaianAnakCewek_enriched.csv                 | Rows:      2,169\n",
       "  • pakaianAnakCowok_enriched.csv                 | Rows:      2,132\n",
+      "  • perabotKecil_enriched.csv                     | Rows:      2,225\n",
+      "  • personalCare_enriched.csv                     | Rows:        975\n",
+      "  • rempahKhas_enriched.csv                       | Rows:      1,427\n",
       "  • sandalPria_enriched.csv                       | Rows:      1,178\n",
       "  • sandalWanita_enriched.csv                     | Rows:      1,192\n",
       "  • sepatuPria_enriched.csv                       | Rows:      1,169\n",
@@ -191,8 +201,8 @@
       "  • tasPria_enriched.csv                          | Rows:      1,193\n",
       "  • tasWanita_enriched.csv                        | Rows:      1,197\n",
       "----------------------------------------------------------------------\n",
-      "Total Files: 23\n",
-      "Total Rows : 35,087\n",
+      "Total Files: 33\n",
+      "Total Rows : 50,140\n",
       "======================================================================\n"
      ]
     }
